--- a/css/self.css
+++ b/css/self.css
@@ -32,3 +32,9 @@
     width: 100%;
     height: 100%;
 }
+.kv h1, .kv .ytm-logo li, .kv .mrt img, .kv .machine-kv img, .kv .mom img, .kv .dad img, .kv .gateBox .gate, .kv .couple-kv img{
+    visibility: hidden;
+}
+.kv .machine-kv img{
+    transform-origin: bottom center;
+}
