--- a/css/self.css
+++ b/css/self.css
@@ -1,6 +1,13 @@
 @media screen and (min-width: 768px) {
     .menu_header {
         position: relative;
+        top: -50px;
+        opacity: 0;
+    }
+    .menu_header.active {
+        top: 0px;
+        opacity: 1;
+        transition: top .5s ease, opacity .5s ease;
     }
     .menu_header .header_hide {
         height: 120px;
@@ -32,9 +39,119 @@
     width: 100%;
     height: 100%;
 }
+
+/* sr版
 .kv h1, .kv .ytm-logo li, .kv .mrt img, .kv .machine-kv img, .kv .mom img, .kv .dad img, .kv .gateBox .gate, .kv .couple-kv img{
     visibility: hidden;
 }
 .kv .machine-kv img{
     transform-origin: bottom center;
+}
+*/
+
+/* tm版 */
+
+.kv h1 > span,
+.kv .ytm-logo li {
+    transform: matrix(1, 0, 0, 1, 0, -50);
+    opacity: 0;
+}
+
+.kv .b1 {
+    transform: matrix(1, 0, 0, 1, 0, 50);
+    opacity: 0;
+}
+
+.kv .b2 {
+    transform: matrix(1, 0, 0, 1, 0, 50);
+    opacity: 0;
+}
+
+.kv .b3 {
+    transform: matrix(1, 0, 0, 1, 0, 50);
+    opacity: 0;
+}
+
+.kv .mrt {
+    transform: matrix(1, 0, 0, 1, -200, 0);
+    opacity: 0;
+}
+
+.kv .gateBox .gate {
+    transform: matrix(1, 0, 0, 1, 0, 100) scaleY(0);
+    opacity: 0;
+}
+
+.kv .machine-kv {
+    transform: matrix(1, 0, 0, 1, 0, 200) scaleY(0);
+    opacity: 0;
+	-moz-transition: none;
+	-webkit-transition: none;
+	-o-transition: color 0 ease-in;
+	transition: none;
+}
+
+.kv .mom img,
+.kv .dad {
+    transform: matrix(1, 0, 0, 1, 50, 0);
+    opacity: 0;
+}
+
+.kv .couple-kv {
+    transform: matrix(1, 0, 0, 1, 100, 0);
+    opacity: 0;
+}
+
+/* in stage */
+
+.video .bird,
+.product .gift-bird {
+    transform: matrix(1, 0, 0, 1, 100, 200);
+    opacity: 0;
+}
+
+.video .bird.active,
+.product .gift-bird.active {
+    transform: matrix(1, 0, 0, 1, 0, 0);
+    opacity: 1;
+    transition: all 1s ease;
+}
+
+.location .machine {
+    transform: matrix(1, 0, 0, 1, 0, 200) scaleY(0);
+    opacity: 0;
+}
+
+.location .star1,
+.location .star2,
+.location .star3 {
+    transform: matrix(1, 0, 0, 1, 0, 50);
+    opacity: 0;
+}
+
+.location .machineBox.active .machine {
+    transform: matrix(1, 0, 0, 1, 0, 0) scaleY(1);
+    opacity: 1;
+    transition: all .4s cubic-bezier(0.175, 0.885, 0.595, 1.355);
+}
+
+.location .machineBox.active .star1 {
+    transform: matrix(1, 0, 0, 1, 0, 0);
+    opacity: 1;
+    transition: all .25s ease;
+    transition-delay: .2s;
+}
+
+.location .machineBox.active .star2 {
+    transform: matrix(1, 0, 0, 1, 0, 0);
+    opacity: 1;
+    transition: all .25s ease;
+    transition-delay: .1s;
+}
+
+.location .machineBox.active .star3 {
+    transform: matrix(1, 0, 0, 1, 0, 0);
+    opacity: 1;
+    transition: all .25s ease;
+    transition-delay: .3s;
 }
