--- a/css/style.css
+++ b/css/style.css
@@ -133,8 +133,7 @@ section,
 summary {
   display: block; }
 
-html,
-body, .wrap {
+.wrap {
   font-weight: 400; }
 
 h1 {
@@ -570,29 +569,6 @@ body {
   font-size: 16px;
   font-size: 1.6rem; }
 
-html,
-body {
-  width: 100%;
-  line-height: 1.5;
-  text-align: center;
-  color: black;
-  margin: 0;
-  padding: 0;
-  font-family: 'Noto Sans TC', 'PingFang TC', 'Heiti TC', 'Apple LiGothic Medium', 'Microsoft JhengHei', sans-serif;
-  min-width: 314px;
-  -webkit-overflow-scrolling: touch;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-text-size-adjust: 100%;
-  -ms-text-size-adjust: 100%;
-  overflow-x: hidden;
-  position: relative;
-  z-index: 0; }
-  @media screen and (min-width: 768px) {
-    html,
-    body {
-      min-width: 1024px; } }
-
 .wrap {
   max-width: 1200px;
   margin: auto;
@@ -612,6 +588,10 @@ body {
   @media screen and (min-width: 768px) {
     .wrap {
       min-width: 1024px; } }
+  .wrap img {
+    width: 100% !important;
+    height: auto !important;
+    display: block !important; }
 
 * {
   -webkit-box-sizing: border-box;
@@ -620,11 +600,6 @@ body {
 
 *:focus {
   outline: none; }
-
-img {
-  width: 100%;
-  height: auto;
-  display: block; }
 
 a {
   text-decoration: none;
