--- a/css/style.css
+++ b/css/style.css
@@ -582,9 +582,9 @@ body {
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
   -ms-text-size-adjust: 100%;
-  overflow-x: hidden;
   position: relative;
-  z-index: 0; }
+  z-index: 0;
+  overflow: hidden; }
   @media screen and (min-width: 768px) {
     .wrap {
       min-width: 1024px; } }
@@ -863,7 +863,7 @@ ul {
   @media screen and (max-width: 767px) {
     .yannick .kv {
       width: 100%;
-      height: 90vh;
+      height: 78vh;
       padding-top: 60px; } }
   @media screen and (max-width: 374px) {
     .yannick .kv {
@@ -2116,7 +2116,8 @@ ul {
   width: 15px; }
 
 .yannick footer {
-  margin-top: 135px; }
+  margin-top: 135px;
+  padding-bottom: 20px; }
   .yannick footer .main {
     width: 100%; }
     .yannick footer .main:before {
@@ -2125,18 +2126,18 @@ ul {
       height: 17px;
       display: block;
       position: absolute;
-      top: -17px;
+      top: 0;
       left: 0;
       background: url(https://fs1.shop123.com.tw/400189/upload/harddisc/4001890_file_938653842152018052538.png) repeat-x; }
   .yannick footer .mrt-cart {
     left: -20%;
-    top: -80px; }
+    top: -66px; }
     @media screen and (max-width: 767px) {
       .yannick footer .mrt-cart {
         left: -100%; } }
     .yannick footer .mrt-cart img {
-      width: auto;
-      height: 65px; }
+      width: auto !important;
+      height: 65px !important; }
   .yannick footer li {
     font-size: 13px;
     font-size: 1.3rem;
