--- a/css/style.css
+++ b/css/style.css
@@ -406,162 +406,6 @@ h6 {
   left: 0;
   z-index: -1; }
 
-/* z-index: 1 */
-/* z-index: 3 */
-/* z-index: 2 */
-.trans_bg {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  z-index: 100;
-  display: none; }
-
-.trans_ipad {
-  display: none; }
-
-.trans_iphone {
-  display: none; }
-
-img {
-  margin: 0 auto; }
-
-@media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (orientation: portrait) {
-  .trans_bg {
-    display: block; }
-  .trans_ipad {
-    display: block;
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    background-color: #e10012; }
-    .trans_ipad .trans_center {
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      -webkit-transform: translate(-50%, -50%);
-      transform: translate(-50%, -50%);
-      text-align: center; }
-      .trans_ipad .trans_center img {
-        width: 50%; }
-      .trans_ipad .trans_center p {
-        text-align: center;
-        font-size: 1.8rem;
-        color: #FFF;
-        line-height: 1.5; } }
-
-@media only screen and (min-device-width: 320px) and (max-device-width: 480px) and (orientation: landscape) {
-  .trans_bg {
-    display: block; }
-  .trans_iphone {
-    display: block;
-    position: relative;
-    font-size: 0;
-    width: 100%;
-    height: 100%;
-    background: #e10012;
-    position: absolute;
-    background-color: #e10012; }
-    .trans_iphone .trans_center {
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      -webkit-transform: translate(-50%, -50%);
-      transform: translate(-50%, -50%);
-      text-align: center; }
-      .trans_iphone .trans_center img {
-        width: 35%; }
-      .trans_iphone .trans_center p {
-        text-align: center;
-        font-size: 1rem;
-        color: #FFF;
-        line-height: 2rem;
-        padding-top: 1rem; } }
-
-@media only screen and (min-device-width: 320px) and (max-device-width: 568px) and (orientation: landscape) {
-  .trans_bg {
-    display: block; }
-  .trans_iphone {
-    display: block;
-    position: relative;
-    font-size: 0;
-    width: 100%;
-    height: 100%;
-    background: #e10012;
-    position: absolute;
-    background-color: #e10012; }
-    .trans_iphone .trans_center {
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      -webkit-transform: translate(-50%, -50%);
-      transform: translate(-50%, -50%);
-      text-align: center; }
-      .trans_iphone .trans_center img {
-        width: 35%; }
-      .trans_iphone .trans_center p {
-        text-align: center;
-        font-size: 1.4rem;
-        color: #FFF;
-        line-height: 1.5;
-        padding-top: 1rem; } }
-
-@media only screen and (min-device-width: 375px) and (max-device-width: 667px) and (orientation: landscape) {
-  .trans_bg {
-    display: block; }
-  .trans_iphone {
-    display: block;
-    position: relative;
-    font-size: 0;
-    width: 100%;
-    height: 100%;
-    background: #e10012;
-    position: absolute;
-    background-color: #e10012; }
-    .trans_iphone .trans_center {
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      -webkit-transform: translate(-50%, -50%);
-      transform: translate(-50%, -50%);
-      text-align: center; }
-      .trans_iphone .trans_center img {
-        width: 35%; }
-      .trans_iphone .trans_center p {
-        text-align: center;
-        font-size: 1.2rem;
-        color: #FFF;
-        line-height: 1.5;
-        padding-top: 1.3rem; } }
-
-@media only screen and (min-device-width: 414px) and (max-device-width: 736px) and (orientation: landscape) {
-  .trans_bg {
-    display: block; }
-  .trans_iphone {
-    display: block;
-    position: relative;
-    font-size: 0;
-    width: 100%;
-    height: 100%;
-    background: #e10012;
-    position: absolute;
-    background-color: #e10012; }
-    .trans_iphone .trans_center {
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      -webkit-transform: translate(-50%, -50%);
-      transform: translate(-50%, -50%);
-      text-align: center; }
-      .trans_iphone .trans_center img {
-        width: 35%; }
-      .trans_iphone .trans_center p {
-        text-align: center;
-        font-size: 1.2rem;
-        color: #FFF;
-        line-height: 1.5; } }
-
 html {
   font-size: 62.5%; }
 
@@ -588,10 +432,14 @@ body {
   @media screen and (min-width: 768px) {
     .wrap {
       min-width: 1024px; } }
-  .wrap img {
-    width: 100% !important;
-    height: auto !important;
-    display: block !important; }
+  @media screen and (max-width: 767px) {
+    .wrap {
+      width: 100%; } }
+
+.yannick img {
+  width: 100% !important;
+  height: auto !important;
+  display: block !important; }
 
 * {
   -webkit-box-sizing: border-box;
@@ -692,7 +540,7 @@ ul {
       content: '';
       width: 8px;
       height: 100%;
-      background: url(../img/menu-bor.png) no-repeat;
+      background: url(https://fs1.shop123.com.tw/400189/upload/harddisc/4001890_file_989331546152018052515.png) no-repeat;
       background-size: contain;
       position: absolute;
       right: 0;
