--- a/css/style.css
+++ b/css/style.css
@@ -247,7 +247,6 @@ h6 {
   padding-top: 107px;
   font-weight: 500;
   z-index: 5;
-  -webkit-transition: all 0.3s ease;
   transition: all 0.3s ease; }
   @media screen and (max-width: 1440px) {
     .yannick .btn-go {
@@ -265,14 +264,15 @@ h6 {
       top: 120px; } }
   @media screen and (max-width: 767px) {
     .yannick .btn-go {
-      -webkit-transform: scale(0.6);
-      transform: scale(0.6);
       top: inherit;
+      right: inherit;
       bottom: 6%;
       padding-top: 44px;
-      right: -25px;
+      left: 41%;
       height: 157px;
-      background-size: 100%; } }
+      background-size: 100%;
+      -webkit-transform: scale(0.6) translateX(-50%);
+      transform: scale(0.6) translateX(-50%); } }
   @media screen and (max-width: 374px) {
     .yannick .btn-go {
       -webkit-transform: scale(0.4);
@@ -370,7 +370,7 @@ h6 {
 .yannick .btn {
   width: 270px;
   height: 70px;
-  line-height: 70px;
+  line-height: 53px;
   color: white;
   font-size: 20px;
   font-size: 2rem;
@@ -379,7 +379,6 @@ h6 {
   letter-spacing: 2px;
   overflow: hidden;
   position: relative;
-  -webkit-transition: 0.35s ease all;
   transition: 0.35s ease all; }
   @media screen and (min-width: 1025px) {
     .yannick .btn:hover {
@@ -389,12 +388,17 @@ h6 {
     .yannick .btn {
       font-size: 1.6rem;
       height: 60px;
-      line-height: 60px; } }
+      line-height: 45px; } }
+  @media screen and (max-width: 413px) {
+    .yannick .btn {
+      font-size: 1.5rem;
+      height: 60px;
+      line-height: 45px; } }
   @media screen and (max-width: 374px) {
     .yannick .btn {
-      font-size: 1.4rem;
+      font-size: 1.3rem;
       height: 50px;
-      line-height: 50px; } }
+      line-height: 33px; } }
   .yannick .btn:before {
     content: attr(data-text);
     position: absolute;
@@ -419,7 +423,7 @@ body {
   line-height: 1.5;
   text-align: center;
   color: black;
-  font-family: 'Noto Sans TC', 'PingFang TC', 'Heiti TC', 'Apple LiGothic Medium', 'Microsoft JhengHei', sans-serif;
+  font-family: 'Noto Sans TC', 'PingFang TC', 'Heiti TC', 'Apple LiGothic Medium', 'Microsoft JhengHei', sans-serif !important;
   min-width: 314px;
   -webkit-overflow-scrolling: touch;
   -webkit-font-smoothing: antialiased;
@@ -442,7 +446,6 @@ body {
   display: block !important; }
 
 * {
-  -webkit-box-sizing: border-box;
   box-sizing: border-box;
   outline: none; }
 
@@ -480,7 +483,6 @@ ul {
     display: block;
     right: 20px;
     top: 20px;
-    -webkit-transition: .3s ease;
     transition: .3s ease; }
     @media screen and (max-width: 767px) {
       .yannick .lightbox .close-btn {
@@ -531,7 +533,8 @@ ul {
         padding-bottom: 80px; } }
   .yannick header li {
     width: 230px;
-    position: relative; }
+    position: relative;
+    text-align: center; }
     @media screen and (max-width: 767px) {
       .yannick header li {
         width: 100%;
@@ -560,7 +563,6 @@ ul {
     color: black;
     font-size: 15px;
     font-size: 1.5rem;
-    -webkit-transition: -webkit-transform .3s ease;
     transition: -webkit-transform .3s ease;
     transition: transform .3s ease;
     transition: transform .3s ease, -webkit-transform .3s ease; }
@@ -595,7 +597,7 @@ ul {
 .yannick .menu-btn {
   width: 23px;
   height: 27vh;
-  background: url(../asset/svg/menu.svg) no-repeat;
+  background: url(https://fs1.shop123.com.tw/400189/upload/harddisc/4001890_file_623433640182018052936.png) no-repeat;
   background-size: contain;
   position: fixed;
   left: 0;
@@ -611,7 +613,7 @@ ul {
   left: 0; }
 
 .yannick .open-btn {
-  background: url(../asset/svg/menu-close.svg) no-repeat right center;
+  background: url(https://fs1.shop123.com.tw/400189/upload/harddisc/4001890_file_623433640182018052936.png) no-repeat right center;
   left: inherit;
   right: 0; }
 
@@ -635,7 +637,6 @@ ul {
     width: 42px;
     height: 5px;
     background: #000;
-    -webkit-transition: all .2s ease-in-out;
     transition: all .2s ease-in-out;
     border-radius: 2px; }
     @media screen and (max-width: 767px) {
@@ -649,7 +650,6 @@ ul {
       background: #000;
       content: '';
       height: 5px;
-      -webkit-transition: all .2s ease-in-out;
       transition: all .2s ease-in-out;
       right: 0;
       width: 42px; }
@@ -938,7 +938,8 @@ ul {
       left: 30px;
       top: 14px; } }
   .yannick .ytm-logo li {
-    color: black; }
+    color: black;
+    text-align: center; }
     .yannick .ytm-logo li:nth-child(2) {
       font-size: 28px;
       font-size: 2.8rem;
@@ -955,7 +956,6 @@ ul {
   width: 470px;
   left: 28%;
   top: 64px;
-  -webkit-transition: all .3s ease;
   transition: all .3s ease; }
   @media screen and (min-width: 1580px) {
     .yannick .machine-kv {
@@ -1196,7 +1196,6 @@ ul {
     -webkit-filter: brightness(70%);
     filter: url('data:image/svg+xml;charset=utf-8,<svg xmlns="http://www.w3.org/2000/svg"><filter id="filter"><feComponentTransfer color-interpolation-filters="sRGB"><feFuncR type="linear" slope="0.7" /><feFuncG type="linear" slope="0.7" /><feFuncB type="linear" slope="0.7" /></feComponentTransfer></filter></svg>#filter');
     filter: brightness(70%);
-    -webkit-transition: -webkit-filter .3s ease;
     transition: -webkit-filter .3s ease;
     transition: filter .3s ease;
     transition: filter .3s ease, -webkit-filter .3s ease; }
@@ -1257,7 +1256,6 @@ ul {
 .yannick .card {
   padding: 80px 0;
   background: url(https://fs1.shop123.com.tw/400189/upload/harddisc/4001890_file_516082533152018052525.png) no-repeat left bottom, #e4e5e7;
-  -webkit-transition: all .3s ease;
   transition: all .3s ease;
   background-size: 100%; }
   @media screen and (max-width: 1200px) {
@@ -1293,34 +1291,36 @@ ul {
         margin-top: 15px;
         margin-bottom: 20px;
         text-align: center; } }
-  .yannick .card li span {
-    display: inline-block;
-    vertical-align: middle; }
-  .yannick .card li:first-child {
-    font-size: 16px;
-    font-size: 1.6rem;
-    letter-spacing: 1.6px; }
-    @media screen and (max-width: 767px) {
-      .yannick .card li:first-child {
-        font-size: 1.4rem; } }
-    .yannick .card li:first-child span:last-child {
-      padding: 2px 7px;
-      border: 1px solid black;
-      margin-top: 22px;
-      margin-left: 28px; }
+  .yannick .card li {
+    text-align: center; }
+    .yannick .card li span {
+      display: inline-block;
+      vertical-align: middle; }
+    .yannick .card li:first-child {
+      font-size: 16px;
+      font-size: 1.6rem;
+      letter-spacing: 1.6px; }
       @media screen and (max-width: 767px) {
-        .yannick .card li:first-child span:last-child {
-          margin-top: 22px;
-          margin-left: 20px; } }
-  .yannick .card li:nth-child(2) {
-    font-size: 20px;
-    font-size: 2rem;
-    letter-spacing: 2px;
-    margin-top: 15px; }
-  .yannick .card li:nth-child(3) {
-    font-size: 13px;
-    font-size: 1.3rem;
-    letter-spacing: 1.3px; }
+        .yannick .card li:first-child {
+          font-size: 1.4rem; } }
+      .yannick .card li:first-child span:last-child {
+        padding: 2px 7px;
+        border: 1px solid black;
+        margin-top: 22px;
+        margin-left: 28px; }
+        @media screen and (max-width: 767px) {
+          .yannick .card li:first-child span:last-child {
+            margin-top: 22px;
+            margin-left: 20px; } }
+    .yannick .card li:nth-child(2) {
+      font-size: 20px;
+      font-size: 2rem;
+      letter-spacing: 2px;
+      margin-top: 15px; }
+    .yannick .card li:nth-child(3) {
+      font-size: 13px;
+      font-size: 1.3rem;
+      letter-spacing: 1.3px; }
   @media screen and (max-width: 767px) {
     .yannick .card h3 span {
       display: block; } }
@@ -1513,7 +1513,7 @@ ul {
       height: 10px;
       bottom: 2px; }
       .yannick .product .line-red img {
-        height: 100%; } }
+        height: 100% !important; } }
 
 .yannick .exclusive span {
   font-weight: normal; }
@@ -1660,38 +1660,41 @@ ul {
       position: absolute;
       top: 0;
       right: -38px; }
-  .yannick .ytmInfo li:first-child {
-    font-size: 20px;
-    font-size: 2rem;
-    letter-spacing: 2px;
-    font-weight: bold; }
-    @media screen and (max-width: 767px) {
-      .yannick .ytmInfo li:first-child {
-        font-size: 1.7rem; } }
-    @media screen and (max-width: 413px) {
-      .yannick .ytmInfo li:first-child {
-        font-size: 1.6rem; } }
-    @media screen and (max-width: 374px) {
-      .yannick .ytmInfo li:first-child {
-        font-size: 1.4rem; } }
-  .yannick .ytmInfo li:nth-child(2) {
-    font-size: 15px;
-    font-size: 1.5rem;
-    line-height: 1.6;
-    letter-spacing: 1.5px;
-    margin-bottom: 25px; }
-    @media screen and (max-width: 767px) {
-      .yannick .ytmInfo li:nth-child(2) {
-        margin-bottom: 15px; } }
-    @media screen and (max-width: 374px) {
-      .yannick .ytmInfo li:nth-child(2) {
-        font-size: 1.4rem; } }
-    .yannick .ytmInfo li:nth-child(2) span {
-      display: block; }
-  .yannick .ytmInfo li:nth-child(4) {
-    font-size: 20px;
-    font-size: 2rem;
-    margin-top: 12px; }
+  .yannick .ytmInfo li {
+    text-align: center; }
+    .yannick .ytmInfo li:first-child {
+      font-size: 20px;
+      font-size: 2rem;
+      letter-spacing: 2px;
+      font-weight: bold; }
+      @media screen and (max-width: 767px) {
+        .yannick .ytmInfo li:first-child {
+          font-size: 1.7rem; } }
+      @media screen and (max-width: 413px) {
+        .yannick .ytmInfo li:first-child {
+          font-size: 1.6rem; } }
+      @media screen and (max-width: 374px) {
+        .yannick .ytmInfo li:first-child {
+          font-size: 1.4rem; } }
+    .yannick .ytmInfo li:nth-child(2) {
+      font-size: 15px;
+      font-size: 1.5rem;
+      line-height: 1.6;
+      letter-spacing: 1.5px;
+      margin-bottom: 25px; }
+      @media screen and (max-width: 767px) {
+        .yannick .ytmInfo li:nth-child(2) {
+          margin-bottom: 15px; } }
+      @media screen and (max-width: 374px) {
+        .yannick .ytmInfo li:nth-child(2) {
+          font-size: 1.4rem; } }
+      .yannick .ytmInfo li:nth-child(2) span {
+        display: block; }
+    .yannick .ytmInfo li:nth-child(4) {
+      font-size: 20px;
+      font-size: 2rem;
+      margin-top: 12px;
+      text-align: center; }
   .yannick .ytmInfo .line-cir:after {
     bottom: -22px;
     background-size: cover; }
@@ -1751,6 +1754,7 @@ ul {
         margin-top: 20px; } }
   .yannick .feature li {
     width: 180px;
+    text-align: center;
     margin: 0 24px; }
     @media screen and (max-width: 767px) {
       .yannick .feature li {
@@ -1965,7 +1969,7 @@ ul {
 
 .yannick footer {
   margin-top: 135px;
-  padding-bottom: 20px; }
+  padding-bottom: 10px; }
   .yannick footer .main {
     width: 100%; }
     .yannick footer .main:before {
@@ -2009,7 +2013,6 @@ ul {
         flex-direction: column;
         text-align: center; } }
   .yannick footer a {
-    -webkit-transition: -webkit-transform .3s ease;
     transition: -webkit-transform .3s ease;
     transition: transform .3s ease;
     transition: transform .3s ease, -webkit-transform .3s ease; }
