--- a/sass/_feature.scss
+++ b/sass/_feature.scss
@@ -1,101 +1,104 @@
-.feature {
-    margin-bottom: 165px;
-    @include m-767 {
-        margin-bottom: 50px;
-    }
-    .line-red {
-        width: 108%;
-        left: -4%;
-    }
-    .deco {
-        display: none;
+.yannick {
+    .feature {
+        margin-bottom: 165px;
         @include m-767 {
-            display: block;
-            width: 27px;
-            top: -7px;
-            right: -22px;
+            margin-bottom: 50px;
         }
-    }
-    ul {
-        margin-top: 90px;
-        @include m-767 {
-            flex-wrap: wrap;
-            margin-top: 20px;
+        .line-red {
+            width: 108%;
+            left: -4%;
         }
-    }
-    li {
-        width: 180px;
-        margin: 0 24px;
-        @include m-767 {
-            width: 50%;
-            margin: 20px auto;
+        .deco {
+            display: none;
+            @include m-767 {
+                display: block;
+                width: 27px;
+                top: -7px;
+                right: -22px;
+            }
         }
-        &:not(:last-child) {
-            position: relative;
-            &:after {
-                content: '';
-                width: 8px;
-                height: 100%;
-                background: url(../img/menu-bor2.png);
-                position: absolute;
-                top: 0;
-                right: -30px;
-                @include m-767 {
-                    right: -4px;
+        ul {
+            margin-top: 90px;
+            @include m-767 {
+                flex-wrap: wrap;
+                margin-top: 20px;
+            }
+        }
+        li {
+            width: 180px;
+            text-align: center;
+            margin: 0 24px;
+            @include m-767 {
+                width: 50%;
+                margin: 20px auto;
+            }
+            &:not(:last-child) {
+                position: relative;
+                &:after {
+                    content: '';
+                    width: 8px;
+                    height: 100%;
+                    background: url(https://fs1.shop123.com.tw/400189/upload/harddisc/4001890_file_366673046152018052530.png);
+                    position: absolute;
+                    top: 0;
+                    right: -30px;
+                    @include m-767 {
+                        right: -4px;
+                    }
+                }
+            }
+            &:nth-child(2) {
+                &:after {
+                    @include m-767 {
+                        display: none;
+                    }
                 }
             }
         }
-        &:nth-child(2) {
-            &:after {
-                @include m-767 {
-                    display: none;
-                }
-            }
+        .icon {
+            display: flex;
+            align-items: center;
+            margin: auto;
+            height: 98px;
         }
-    }
-    .icon {
-        display: flex;
-        align-items: center;
-        margin: auto;
-        height: 98px;
-    }
-    .tt {
-        display: block;
-        font-size: 2rem;
-        margin: 10px 0 5px;
-        letter-spacing: 2px;
-        font-weight: bold;
-    }
-    .txt {
-        font-size: 1.5rem;
-        @include m-767 {
-            font-size: 1.4rem;
-        }
-        span {
+        .tt {
             display: block;
+            font-size: 2rem;
+            margin: 10px 0 5px;
+            letter-spacing: 2px;
+            font-weight: bold;
+        }
+        .txt {
+            font-size: 1.5rem;
+            @include m-767 {
+                font-size: 1.4rem;
+            }
             span {
-                display: inline-block;
+                display: block;
+                span {
+                    display: inline-block;
+                }
             }
         }
-    }
-    .bag {
-        .icon {
-            width: 100px;
+        .bag {
+            .icon {
+                width: 100px;
+            }
         }
-    }
-    .cake {
-        .icon {
-            width: 116px;
+        .cake {
+            .icon {
+                width: 116px;
+            }
         }
-    }
-    .pay {
-        .icon {
-            width: 93px;
+        .pay {
+            .icon {
+                width: 93px;
+            }
         }
-    }
-    .buy {
-        .icon {
-            width: 91px;
+        .buy {
+            .icon {
+                width: 91px;
+            }
         }
     }
 }
