--- a/sass/_location.scss
+++ b/sass/_location.scss
@@ -1,182 +1,180 @@
-.num54 {
-    width: 47px;
-    display: inline-block;
-    margin: 0 10px 10px;
-    @include m-767 {
-        margin: 0 10px 15px;
-        width: 40px;
-    }
-    @include m-374 {
-        width: 35px;
-    }
-}
-
-.location {
-    h2 {
-        .ttBox {
-            padding: 0 30px;
-        }
-    }
-    .deco {
-        display: none;
+.yannick {
+    .num54 {
+        width: 47px;
+        display: inline-block;
+        margin: 0 10px 10px;
         @include m-767 {
-            display: block;
-            width: 30px;
-            right: 0;
-            top: -11px;
+            margin: 0 10px 15px;
+            width: 40px;
+        }
+        @include m-374 {
+            width: 35px;
         }
     }
-    .line-red {
-        bottom: 8px;
-    }
-    .main {
-        display: flex;
-        margin-bottom: 65px;
-        margin-top: 70px;
-        @include m-767 {
-            margin-top: 30px;
-        }
-    }
-    .redBox {
-        width: 27%;
-        background: $red;
-        @include m-1024 {
-            width: 10%;
-        }
-        @include m-767 {
-            width: 15%;
-        }
-    }
-    .mrt-line {
-        width: 35%;
-        text-align: left;
-        padding-right: 20px;
-        @include pc-1440 {
-            width: 40%;
-        }
-        @include m-1024 {
-            width: 65%;
-        }
-        @include m-767 {
-            width: 85%;
-            padding-right: 0;
-        }
-    }
-    .tt {
-        font-size: 2.4rem;
-        font-weight: bold;
-        &:before {
-            content: '';
-            @include cir(26px);
-            top: 5px;
-            left: -42px;
-            position: absolute;
-            @include m-767 {
-                width: 20px;
-                height: 20px;
-                left: -33px;
-                top: 5px;
+    .location {
+        h2 {
+            .ttBox {
+                padding: 0 30px;
             }
         }
-        @include m-767 {
-            font-size: 2rem;
-        }
-    }
-    p {
-        font-size: 1.8rem;
-        @extend %txt_justify;
-        @include m-767 {
-            font-size: 1.6rem;
-        }
-    }
-    .machineBox {
-        width: 36%;
-        align-self: flex-end;
-        padding-left: 30px;
-        padding-bottom: 10px;
-        @include m-1024 {
-            padding-bottom: 60px;
-        }
-        @include m-767 {
+        .deco {
             display: none;
+            @include m-767 {
+                display: block;
+                width: 30px;
+                right: 0;
+                top: -11px;
+            }
         }
-    }
-    .machine {
-        width: 500px;
-        flex-shrink: 0;
-        @include pc-1440 {
-            width: 455px;
+        .line-red {
+            bottom: 8px;
         }
-        @include m-1024 {
-            width: 355px;
+        .main {
+            display: flex;
+            margin-bottom: 65px;
+            margin-top: 70px;
+            @include m-767 {
+                margin-top: 30px;
+            }
         }
-    }
-    li {
-        padding-left: 28px;
-        margin: 30px 0;
-        @include m-767 {
-            margin: 20px 0;
-            padding-left: 22px;
+        .redBox {
+            width: 27%;
+            background: $red;
+            @include m-1024 {
+                width: 10%;
+            }
+            @include m-767 {
+                width: 15%;
+            }
+        }
+        .mrt-line {
+            width: 35%;
+            text-align: left;
             padding-right: 20px;
-        }
-        &:first-child {
-            .tt {
-                &:before {
-                    background: #0a6cca;
-                }
+            @include pc-1440 {
+                width: 40%;
+            }
+            @include m-1024 {
+                width: 65%;
+            }
+            @include m-767 {
+                width: 85%;
+                padding-right: 0;
             }
         }
-        &:nth-child(2) {
-            .tt {
-                &:before {
-                    background: #c1892a;
+        .tt {
+            font-size: 2.4rem;
+            font-weight: bold;
+            &:before {
+                content: '';
+                @include cir(26px);
+                top: 5px;
+                left: -42px;
+                position: absolute;
+                @include m-767 {
+                    width: 20px;
+                    height: 20px;
+                    left: -33px;
+                    top: 5px;
                 }
             }
+            @include m-767 {
+                font-size: 2rem;
+            }
         }
-        &:nth-child(3) {
-            .tt {
-                &:before {
-                    background: $red;
-                    border: 3px solid white;
-                    top: 3px;
-                    @include m-767 {
-                        top: 2px;
+        p {
+            font-size: 1.8rem;
+            @extend %txt_justify;
+            @include m-767 {
+                font-size: 1.6rem;
+            }
+        }
+        .machineBox {
+            width: 36%;
+            align-self: flex-end;
+            padding-left: 30px;
+            padding-bottom: 10px;
+            @include m-1024 {
+                padding-bottom: 60px;
+            }
+            @include m-767 {
+                display: none;
+            }
+        }
+        .machine {
+            width: 500px;
+            flex-shrink: 0;
+            @include pc-1440 {
+                width: 455px;
+            }
+            @include m-1024 {
+                width: 355px;
+            }
+        }
+        li {
+            padding-left: 28px;
+            margin: 30px 0;
+            @include m-767 {
+                margin: 20px 0;
+                padding-left: 22px;
+                padding-right: 20px;
+            }
+            &:first-child {
+                .tt {
+                    &:before {
+                        background: #0a6cca;
+                    }
+                }
+            }
+            &:nth-child(2) {
+                .tt {
+                    &:before {
+                        background: #c1892a;
+                    }
+                }
+            }
+            &:nth-child(3) {
+                .tt {
+                    &:before {
+                        background: $red;
+                        border: 3px solid white;
+                        top: 3px;
+                        @include m-767 {
+                            top: 2px;
+                        }
+                    }
+                }
+            }
+            &:nth-child(4) {
+                .tt {
+                    &:before {
+                        background: #0a8557;
+                    }
+                }
+            }
+            &:nth-child(5) {
+                .tt {
+                    margin-bottom: 10px;
+                    &:before {
+                        background: #f9b21e;
                     }
                 }
             }
         }
-        &:nth-child(4) {
-            .tt {
-                &:before {
-                    background: #0a8557;
-                }
-            }
-        }
-        &:nth-child(5) {
-            .tt {
-                margin-bottom: 10px;
-                &:before {
-                    background: #f9b21e;
-                }
-            }
-        }
     }
-}
-
-.star1 {
-    top: -188px;
-    left: 46px;
-    width: 18px;
-}
-
-.star2 {
-    top: -75px;
-    left: 176px;
-    width: 28px;
-}
-
-.star3 {
-    top: -127px;
-    left: 315px;
-    width: 15px;
+    .star1 {
+        top: -188px;
+        left: 46px;
+        width: 18px;
+    }
+    .star2 {
+        top: -75px;
+        left: 176px;
+        width: 28px;
+    }
+    .star3 {
+        top: -127px;
+        left: 315px;
+        width: 15px;
+    }
 }
