--- a/css/style.css
+++ b/css/style.css
@@ -423,7 +423,6 @@ body {
   line-height: 1.5;
   text-align: center;
   color: black;
-  font-family: 'Noto Sans TC', 'PingFang TC', 'Heiti TC', 'Apple LiGothic Medium', 'Microsoft JhengHei', sans-serif !important;
   min-width: 314px;
   -webkit-overflow-scrolling: touch;
   -webkit-font-smoothing: antialiased;
@@ -432,13 +431,19 @@ body {
   -ms-text-size-adjust: 100%;
   position: relative;
   z-index: 0;
-  overflow: hidden; }
+  overflow: hidden;
+  font-family: 'Noto Sans TC', 'PingFang TC', 'Heiti TC', 'Apple LiGothic Medium', 'Microsoft JhengHei', sans-serif !important; }
   @media screen and (min-width: 768px) {
     .wrap {
       min-width: 1024px; } }
   @media screen and (max-width: 767px) {
     .wrap {
       width: 100%; } }
+  .wrap p,
+  .wrap div,
+  .wrap span,
+  .wrap a {
+    font-family: 'Noto Sans TC', 'PingFang TC', 'Heiti TC', 'Apple LiGothic Medium', 'Microsoft JhengHei', sans-serif !important; }
 
 .yannick img {
   width: 100% !important;
@@ -871,7 +876,7 @@ ul {
       bottom: -62px; } }
   @media screen and (max-width: 413px) {
     .yannick .b2 {
-      right: -26px;
+      right: -18px;
       bottom: -104px; } }
   @media screen and (max-width: 374px) {
     .yannick .b2 {
@@ -1164,6 +1169,11 @@ ul {
 .yannick .line-kv-r,
 .yannick .line-kv-l {
   width: 100%; }
+  @media screen and (max-width: 767px) {
+    .yannick .line-kv-r img,
+    .yannick .line-kv-l img {
+      width: auto !important;
+      height: 100% !important; } }
 
 .yannick .video {
   margin-top: 155px;
